--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "tooltip",
+  "name": "jquery-tooltip",
   "title": "jQuery tooltip",
   "description": "A jQuery plugin for showing tooltip text when hover on a element.",
   "version": "0.1.0",
-  "homepage": "https://github.com/amazingSurge/tooltip",
+  "homepage": "https://github.com/amazingSurge/jquery-tooltip",
   "author": {
     "name": "amazingSurge",
     "email": "amazingSurge@yahoo.com",
@@ -11,13 +11,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:amazingSurge/tooltip.git"
+    "url": "git@github.com:amazingSurge/jquery-tooltip.git"
   },
-  "bugs": "https://github.com/amazingSurge/tooltip/issues",
+  "bugs": "https://github.com/amazingSurge/jquery-tooltip/issues",
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/amazingSurge/tooltip/blob/master/LICENSE-MIT"
+      "url": "https://github.com/amazingSurge/jquery-tooltip/blob/master/LICENSE-MIT"
     }
   ],
   "engines": {
