--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,15 @@
 {
-  "name": "jquery-tooltip",
-  "version": "0.1.1",
-  "main": "dist/jquery-tooltip.js",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "jquery": ">=1.8.3"
-  }
+    "name": "jquery-asTooltip",
+    "version": "0.1.1",
+    "main": "dist/jquery-asTooltip.js",
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "test",
+        "tests"
+    ],
+    "dependencies": {
+        "jquery": ">=1.8.3"
+    }
 }
