--- a/package.json
+++ b/package.json
@@ -23,18 +23,19 @@
     "node": ">= 0.8.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.4",
-    "grunt-contrib-jshint": "*",
+    "grunt": "~0.4.5",
+    "grunt-contrib-clean": "*",
     "grunt-contrib-concat": "*",
+    "grunt-contrib-copy": "*",
+    "grunt-contrib-jshint": "*",
+    "grunt-contrib-less": "*",
+    "grunt-autoprefixer": "*",
     "grunt-contrib-uglify": "*",
     "grunt-contrib-watch": "*",
-    "grunt-contrib-clean": "*",
-    "grunt-text-replace": "*",
     "grunt-jsbeautifier": "*",
-    "grunt-csscomb": "*",
-    "grunt-autoprefixer": "*",
-    "grunt-contrib-less": "~0.11.0",
-    "load-grunt-tasks": "~0.4.0"
+    "grunt-text-replace": "*",
+    "load-grunt-tasks": "*",
+    "grunt-csscomb": "*"
   },
   "dependencies": {}
 }
