--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "homepage": "https://github.com/amazingSurge/jquery-asTooltip",
   "author": {
     "name": "amazingSurge",
-    "email": "amazingSurge@gmail.com"
+    "email": "amazingSurge@yahoo.com",
+    "url": "amazingSurge.com"
   },
   "repository": {
     "type": "git",
@@ -20,10 +21,10 @@
     }
   ],
   "engines": {
-    "node": ">= 0.8.0"
+    "node": ">=0.10.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
+    "grunt": "*",
     "grunt-contrib-clean": "*",
     "grunt-contrib-concat": "*",
     "grunt-contrib-copy": "*",
